alter text-size in 'share' dropdown menu to prevent text clipping in win/chrome

--- a/sass/application/modules/_dropdown.sass
+++ b/sass/application/modules/_dropdown.sass
@@ -31,7 +31,6 @@
     border-top: 0
     li
       display: block
-      padding: 4px 0 4px 12px
       background: #eee
       border-top: 1px solid #f7f7f7
       border-bottom: 1px solid $border_gray_light
@@ -42,10 +41,12 @@
         border-bottom: 0
       a
         display: block
+        height: 16px
+        padding: 5px 0 4px 12px        
         +din-regular
+        font-size: 15px
         color: #666
         text-decoration: none
-        line-height: 1.2em
       &:hover
         background: #fff
 
